--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ tints:-
 #dce8fa
 */
 
+/* GENERAL */
+
 * {
   margin: 0;
   padding: 0;
@@ -31,10 +33,14 @@ body {
   background-image: linear-gradient(to right, #dce8fa, #edf3fc);
   font-family: sans-serif;
   min-height: 100vh;
-  width: 80rem;
+  max-width: 80rem;
   margin: auto;
   border: 1px solid #a7c5f2;
   color: #111418;
+}
+
+.mar-bot {
+  margin-bottom: 4.8rem;
 }
 
 /* NAVIGATION */
@@ -71,7 +77,7 @@ body {
 
 .hero {
   display: flex;
-  margin-bottom: 4.8rem;
+  align-items: center;
 }
 
 .hero-text-box {
@@ -89,7 +95,7 @@ body {
 }
 
 .hero-img {
-  width: 30rem;
+  max-width: 30rem;
   height: auto;
   border-radius: 50%;
   padding: 2rem;
@@ -122,11 +128,10 @@ body {
 
 .about {
   display: flex;
-  margin-bottom: 4.8rem;
 }
 
 .about-box {
-  flex-basis: 50%;
+  flex-basis: 40rem;
   padding: 2rem;
 }
 
@@ -172,12 +177,6 @@ body {
 
 /* SKILLS */
 
-.skill {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 4.8rem;
-}
-
 .specialize-box {
   padding: 2rem;
 }
@@ -206,18 +205,21 @@ body {
 }
 
 .toolbox-img {
+  width: 60rem;
+  margin: auto;
   display: flex;
-  justify-content: center;
 }
 
 .toolbox img {
-  display: inline-block;
+  width: 15rem;
+  flex-shrink: 1;
+  height: auto;
+  display: inline-flex;
 }
 
 /* PROJECT */
 
 .project {
-  margin-bottom: 4.8rem;
   padding: 2rem;
 }
 
@@ -234,16 +236,16 @@ body {
 }
 
 .project img {
-  width: 80%;
+  max-width: 60rem;
+  width: 90%;
   height: auto;
-  display: inline-block;
+  /* display: inline-block; */
   box-shadow: 0 0 10px 5px #96b1da;
 }
 
 /* CONTACT */
 
 .contact {
-  margin-bottom: 4.8rem;
   padding: 2rem;
 }
 
@@ -271,7 +273,75 @@ body {
 /* FOOTER */
 
 .footer {
-  margin-bottom: 4.8rem;
   padding: 2rem;
   font-size: 1.2rem;
+}
+
+/* MEDIA QUERIES */
+
+/* 800px */
+@media (max-width: 50em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+/* 640px */
+@media (max-width: 40em) {
+  html {
+    font-size: 37.5%;
+  }
+}
+
+/* 480px */
+@media (max-width: 30em) {
+  .toolbox-img {
+    max-width: 30rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
+
+/* 384px */
+@media (max-width: 24em) {
+  body {
+    max-width: 60rem;
+  }
+
+  .hero {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    justify-items: center;
+  }
+
+  .hero-text-box {
+    width: 100%;
+    padding: 2rem;
+  }
+
+  .hero-img-box {
+    width: 100%;
+    text-align: center;
+  }
+
+  .hero-img {
+    max-width: 50rem;
+    width: 90%;
+    height: auto;
+    border-radius: 50%;
+    padding: 2rem;
+  }
+
+  .project img {
+    max-width: 50rem;
+    width: 90%;
+  }
+
+  .about {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
 }
